# Embedded-rust-esp32

./: Cargo.toml  build.rs  cfg.toml.example
examples/: solution_publ.rs
lib/rgb-led/: Cargo.toml
lib/wifi/: Cargo.toml
src/: main.rs  types.rs
