[package]
name = "mqtt-pub"
version = "0.1.0"
authors = [
    "Luke Malcom <lmalcom@vertec.io>",
]
edition = "2021"
resolver = "2"

[[bin]]
name = "mqtt-pub"
harness = false # We can't use the default rust libtest harness for a crosscompile target

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow        = "=1.0.95"
embedded-svc  = "=0.28.1"
esp-idf-svc   = "0.51.0"
get-uuid      = { path = "lib/get-uuid" }
log           = "0.4.25"
mqtt-messages = { path = "lib/mqtt-messages" }
rgb-led       = { path = "lib/rgb-led" }
shtcx         = "=1.0.0"
toml-cfg      = "0.2.0"
wifi          = { path = "lib/wifi" }

[build-dependencies]
embuild  = "=0.33.0"
toml-cfg = "0.2.0"
